refactor: optimize MigrationRecordService and add integration tests