@@ -13,7 +13,6 @@ import uk.gov.hmcts.reform.preapi.batch.util.RecordingUtils;
 import uk.gov.hmcts.reform.preapi.enums.UpsertResult;
 
 import java.sql.Timestamp;
-import java.time.Instant;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
@@ -21,22 +20,16 @@ import java.util.UUID;
 
 @Service
 public class MigrationRecordService {
-
     private final MigrationRecordRepository migrationRecordRepository;
     private final LoggingService loggingService;
 
     @Autowired
-    public MigrationRecordService(
-        final MigrationRecordRepository migrationRecordRepository,
-        final LoggingService loggingService
-    ) {
+    public MigrationRecordService(final MigrationRecordRepository migrationRecordRepository,
+                                  final LoggingService loggingService) {
         this.migrationRecordRepository = migrationRecordRepository;
         this.loggingService = loggingService;
     }
 
-    // =========================================
-    // ============ FIND =======================
-    // =========================================
     @Transactional(readOnly = true)
     public Optional<MigrationRecord> findByArchiveId(String archiveId) {
         return migrationRecordRepository.findByArchiveId(archiveId);
@@ -44,60 +37,37 @@ public class MigrationRecordService {
 
     @Transactional(readOnly = true)
     public Optional<MigrationRecord> getOrigFromCopy(MigrationRecord copy) {
-        if (copy.getParentTempId() == null) {
-            return Optional.empty();
-        }
-        return migrationRecordRepository.findById(copy.getParentTempId());
+        return copy.getParentTempId() != null
+            ? migrationRecordRepository.findById(copy.getParentTempId())
+            : Optional.empty();
     }
-    
+
     public List<MigrationRecord> getPendingMigrationRecords() {
         return migrationRecordRepository.findByStatus(VfMigrationStatus.PENDING);
     }
 
-    @Transactional(readOnly = true)
-    public boolean isMostRecentVersion(String archiveId) {
-        return migrationRecordRepository.findByArchiveId(archiveId)
-            .map(MigrationRecord::getIsMostRecent)
-            .orElse(false);
-    }
-    
-    @Transactional(readOnly = true)
-    public Optional<MigrationRecord> getMostRecentCopyWithParentInfo(String recordingGroupKey) {
-        List<MigrationRecord> group = migrationRecordRepository.findByRecordingGroupKey(recordingGroupKey);
-
-        return group.stream()
-            .filter(r -> "COPY".equalsIgnoreCase(r.getRecordingVersion()))
-            .filter(MigrationRecord::getIsMostRecent)
-            .findFirst();
-    }
-    
-    // =========================================
-    // ============== UPSERT ===================
-    // =========================================
     @Transactional
-    public UpsertResult upsert(
-        String archiveId,
-        String archiveName,
-        Timestamp createTime,
-        Integer duration,
-        String courtReference,
-        String urn,
-        String exhibitReference,
-        String defendantName,
-        String witnessName,
-        String recordingVersion,
-        String recordingVersionNumber,
-        String mp4FileName,
-        String fileSizeMb,
-        VfMigrationStatus status,
-        String reason,
-        String errorMessage,
-        Timestamp resolvedAt,
-        UUID recordingId
-    ) {
-        var existing = migrationRecordRepository.findByArchiveId(archiveId);
+    public UpsertResult upsert(String archiveId,
+                               String archiveName,
+                               Timestamp createTime,
+                               Integer duration,
+                               String courtReference,
+                               String urn,
+                               String exhibitReference,
+                               String defendantName,
+                               String witnessName,
+                               String recordingVersion,
+                               String recordingVersionNumber,
+                               String mp4FileName,
+                               String fileSizeMb,
+                               VfMigrationStatus status,
+                               String reason,
+                               String errorMessage,
+                               Timestamp resolvedAt,
+                               UUID recordingId) {
+        Optional<MigrationRecord> existing = migrationRecordRepository.findByArchiveId(archiveId);
 
-        var recording = existing.orElse(new MigrationRecord()); 
+        MigrationRecord recording = existing.orElse(new MigrationRecord());
 
         recording.setArchiveId(archiveId);
         recording.setArchiveName(archiveName);
@@ -118,27 +88,23 @@ public class MigrationRecordService {
         recording.setResolvedAt(resolvedAt);
         recording.setRecordingId(recordingId);
 
-        var isUpdate = existing.isPresent();
+        boolean isUpdate = existing.isPresent();
 
         if (!isUpdate) {
             recording.setId(UUID.randomUUID());
-            recording.setCreatedAt(Timestamp.from(Instant.now()));
         }
 
-        migrationRecordRepository.save(recording);
+        migrationRecordRepository.saveAndFlush(recording);
         return isUpdate ? UpsertResult.UPDATED : UpsertResult.CREATED;
     }
 
-
     @Transactional
-    public boolean insertPendingFromXml(
-        String archiveId,
-        String archiveName,
-        String createTimeEpoch,
-        String duration,
-        String mp4FileName,
-        String fileSizeMb
-    ) {
+    public boolean insertPendingFromXml(String archiveId,
+                                        String archiveName,
+                                        String createTimeEpoch,
+                                        String duration,
+                                        String mp4FileName,
+                                        String fileSizeMb) {
         if (migrationRecordRepository.findByArchiveId(archiveId).isPresent()) {
             loggingService.logInfo("Already processed: %s", archiveName);
             return false;
@@ -147,15 +113,14 @@ public class MigrationRecordService {
         Timestamp createTime = null;
         long epoch = Long.parseLong(createTimeEpoch);
         if (epoch > 0) {
-            if (epoch < 100_000_000_000L) { 
+            if (epoch < 100_000_000_000L) {
                 epoch *= 1000;
             }
             createTime = new Timestamp(epoch);
         }
 
-        Integer parsedDuration = null;
+        Integer parsedDuration;
         parsedDuration = duration != null ? Integer.valueOf(duration) : null;
-    
 
         upsert(
             archiveId,
@@ -180,7 +145,7 @@ public class MigrationRecordService {
 
         return true;
     }
-    
+
     @Transactional
     public boolean insertPending(CSVArchiveListData archiveItem) {
         if (migrationRecordRepository.findByArchiveId(archiveItem.getArchiveId()).isPresent()) {
@@ -195,15 +160,15 @@ public class MigrationRecordService {
                 .map(Timestamp::valueOf)
                 .orElse(null),
             archiveItem.getDuration(),
-            null, 
-            null,
-            null, 
             null,
             null,
             null,
-            null, 
-            archiveItem.getFileName(), 
-            archiveItem.getFileSize(), 
+            null,
+            null,
+            null,
+            null,
+            archiveItem.getFileName(),
+            archiveItem.getFileSize(),
             VfMigrationStatus.PENDING,
             null,
             null,
@@ -214,9 +179,6 @@ public class MigrationRecordService {
         return true;
     }
 
-    // =========================================
-    // ============== UPDATE ===================
-    // =========================================
     @Transactional
     public void updateMetadataFields(String archiveId, ExtractedMetadata extracted) {
         migrationRecordRepository.findByArchiveId(archiveId).ifPresent(record -> {
@@ -230,7 +192,7 @@ public class MigrationRecordService {
             record.setRecordingVersionNumber(extracted.getRecordingVersionNumber());
             record.setFileName(extracted.getFileName());
             record.setFileSizeMb(extracted.getFileSize());
-            
+
             String groupKey = String.join("|",
                 nullToEmpty(extracted.getUrn()),
                 nullToEmpty(extracted.getExhibitReference()),
@@ -302,7 +264,7 @@ public class MigrationRecordService {
             .findByRecordingGroupKey(recordingGroupKey)
             .stream()
             .filter(r -> "ORIG".equalsIgnoreCase(r.getRecordingVersion()))
-            .filter(r -> r.getIsPreferred() != null && r.getIsPreferred()) 
+            .filter(r -> r.getIsPreferred() != null && r.getIsPreferred())
             .filter(r -> {
                 String recVersion = r.getRecordingVersionNumber();
                 return recVersion != null && recVersion.split("\\.")[0].equals(origVersionStr);
@@ -317,22 +279,6 @@ public class MigrationRecordService {
             copy.setParentTempId(maybeOrig.get().getId());
             migrationRecordRepository.save(copy);
         });
-    }
-
-    // =========================================
-    // ============ HELPERS ====================
-    // =========================================
-    public boolean isPreferredArchive(String archiveId) {
-        return migrationRecordRepository.findByArchiveId(archiveId)
-            .map(MigrationRecord::getIsPreferred)
-            .orElse(false);
-    }
-
-    @Transactional(readOnly = true)
-    public Optional<MigrationRecord> findOrigByGroupKey(String groupKey) {
-        return migrationRecordRepository.findByRecordingGroupKey(groupKey).stream()
-            .filter(record -> "ORIG".equalsIgnoreCase(record.getRecordingVersion()))
-            .findFirst();
     }
 
     private static String nullToEmpty(String input) {
@@ -416,15 +362,14 @@ public class MigrationRecordService {
         return migrationRecordRepository.findByRecordingGroupKeyStartingWith(baseGroupKey).stream()
             .filter(r -> "ORIG".equalsIgnoreCase(r.getRecordingVersion()))
             .map(MigrationRecord::getRecordingVersionNumber)
-            .map(v -> v.split("\\.")[0]) 
+            .map(v -> v.split("\\.")[0])
             .distinct()
             .toList();
     }
 
     public Optional<String> findMostRecentVersionNumberInGroup(String groupKey) {
-        List<MigrationRecord> groupRecords = migrationRecordRepository.findByRecordingGroupKey(groupKey);
-
-        return groupRecords.stream()
+        return migrationRecordRepository.findByRecordingGroupKey(groupKey)
+            .stream()
             .map(MigrationRecord::getRecordingVersionNumber)
             .filter(version -> version != null && !version.isBlank())
             .max(RecordingUtils::compareVersionStrings);
@@ -434,11 +379,12 @@ public class MigrationRecordService {
         String urn, String exhibitRef, String witnessName, String defendantName) {
 
         return String.join("|",
-            nullToEmpty(urn),
-            nullToEmpty(exhibitRef),
-            nullToEmpty(witnessName),
-            nullToEmpty(defendantName)
-        ).toLowerCase().trim();
+                           nullToEmpty(urn),
+                           nullToEmpty(exhibitRef),
+                           nullToEmpty(witnessName),
+                           nullToEmpty(defendantName))
+            .toLowerCase()
+            .trim();
     }
 
     private void setMostRecentFlag(String groupKey) {
@@ -452,19 +398,16 @@ public class MigrationRecordService {
             .filter(r -> "ORIG".equalsIgnoreCase(r.getRecordingVersion()))
             .forEach(r -> r.setIsMostRecent(true));
 
-        var copyRecords = groupRecords.stream()
+        List<MigrationRecord> copyRecords = groupRecords.stream()
             .filter(r -> "COPY".equalsIgnoreCase(r.getRecordingVersion()))
             .filter(r -> r.getRecordingVersionNumber() != null && r.getRecordingVersionNumber().matches("\\d+"))
             .toList();
 
         if (copyRecords.size() == 1) {
-            copyRecords.get(0).setIsMostRecent(true);
+            copyRecords.getFirst().setIsMostRecent(true);
         } else {
             MigrationRecord mostRecentCopy = copyRecords.stream()
-                .max((a, b) -> Integer.compare(
-                    Integer.parseInt(a.getRecordingVersionNumber()),
-                    Integer.parseInt(b.getRecordingVersionNumber())
-                ))
+                .max(Comparator.comparingInt(a -> Integer.parseInt(a.getRecordingVersionNumber())))
                 .orElse(null);
 
             for (MigrationRecord copy : copyRecords) {
@@ -474,5 +417,4 @@ public class MigrationRecordService {
 
         migrationRecordRepository.saveAll(groupRecords);
     }
-    
 }
